# robocup_packages

./: .qglviewer.xml  README.md  autoload.minimal  setup.bash
game_controller_bridge/: CMakeLists.txt  package.xml
game_controller_bridge/src/naoqi/gcbridge/: CMakeLists.txt  main.cpp  qiproject.xml
game_controller_bridge/src/naoqi/gcbridge/build-cross/: CMakeCache.txt  Makefile  cmake_install.cmake
game_controller_bridge/src/naoqi/gcbridge/build-cross/sdk/share/qi/: path.conf
game_controller_bridge/src/naoqi/gcbridge/build-naoqi-sdk/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
game_controller_bridge/src/naoqi/gcbridge/build-naoqi-sdk/catkin_generated/: generate_cached_setup.py  setup_cached.sh
game_controller_bridge/src/naoqi/gcbridge/build-naoqi-sdk/catkin_generated/installspace/: .rosinstall  setup.sh
game_controller_bridge/src/naoqi/gcbridge/build-naoqi-sdk/catkin_generated/stamps/gcbridge/: _setup_util.py.stamp
game_controller_bridge/src/naoqi/gcbridge/build-naoqi-sdk/devel/: .catkin  .rosinstall  setup.sh
game_controller_bridge/src/naoqi/gcbridge/build-naoqi-sdk/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
game_controller_bridge/src/naoqi/gcbridge/build-naoqi-sdk/sdk/share/qi/: path.conf
game_controller_bridge/src/naoqi/gcbridge/build-ros-naoqi/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
game_controller_bridge/src/naoqi/gcbridge/build-ros-naoqi/sdk/share/qi/: path.conf
robocup_action_control/: CMakeLists.txt  package.xml
robocup_launcher/: CMakeLists.txt  package.xml
(+180 files in other folders)
